added more CSS and HTML

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset='utf-8' />
       <title>Wireframe Exercise</title>
-      <link rel="stylesheet" type="text/css" href="css/reset.css" />
+      <!-- <link rel="stylesheet" type="text/css" href="css/reset.css" /> -->
       <link rel="stylesheet" type="text/css" href="css/style.css"/>
       
    </head>
@@ -30,6 +30,21 @@
             <section>
                 <img src="https://placehold.it/300x375/ddd" alt = "Sub Banner 3" />
             </section>
+            <section>
+                <img src="https://placehold.it/480x275/ddd" alt = "Feature Section Banner" />
+                
+                <p>
+                    <h2>Featured Section Heading</h2>
+                    Lorem ipsum dolor amet kombucha ennui woke tilde hashtag ugh viral four dollar toast brooklyn godard. Kickstarter pinterest raw denim 3 wolf moon, leggings coloring book forage health goth man braid tumeric keffiyeh portland. Blog quinoa single-origin coffee normcore lo-fi PBR&B bespoke snackwave tbh cloud bread kinfolk ennui. Celiac single-origin coffee green juice scenester af everyday carry succulents vaporware cred humblebrag chia.
+                    <br>
+                    <br>
+                    Plaid pickled 8-bit, tilde thundercats banjo pitchfork man braid skateboard wolf try-hard echo park cloud bread. Skateboard hashtag aesthetic cred. 90's cliche freegan, raw denim banh mi waistcoat cronut ramps palo santo brunch schlitz. XOXO crucifix asymmetrical, truffaut cornhole bespoke small batch portland everyday carry. Normcore dreamcatcher intelligentsia cold-pressed umami man braid leggings snackwave woke copper mug godard.
+                </p>
+                <img src=img/seeInActionButton.png alt = "See in Action" />
+            </section>
             </main>
     </body>
+    <footer>
+        <img src="https://placehold.it/960x180/ddd" alt = "Footer Image" />
+    </footer>
 </html>
